# loom-kernels

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  ci_typos.yml  deploy-pages.yml
bench/: bench_gateway.py  run_trace.py
benches/: jit_micro.rs  tpch.rs
benchmarks/: vllm_engine_fp8_ab.py  vllm_engine_greedy_logprobs.py  vllm_engine_paged_decode.py  vllm_engine_rope_paged_kv.py  vllm_fp8_kv_system.py  vllm_greedy_sample_logprobs.py  vllm_min_p_filter.py  vllm_paged_decode_attention.py  vllm_paged_decode_backend.py  vllm_paged_decode_shape_sweep.py  vllm_rms_norm_dynamic_fp8.py  vllm_rope_paged_kv.py  vllm_selected_token_logprobs.py  vllm_silu_and_mul.py  vllm_silu_and_mul_dynamic_fp8.py
bridge/: quillcache_store_client.py  quillcache_v1_connector.py  vllm_kv_bridge.py
crates/loom-attention/: Cargo.toml
crates/loom-attention/src/: attention.rs  catalog.rs  lib.rs  runtime.rs  scheduler.rs  transport.rs  types.rs
crates/loom-attention/src/pool/: local.rs  mod.rs
crates/loom-cuda/: Cargo.toml  README.md
crates/loom-cuda-bridge/: Cargo.toml  README.md
crates/loom-cuda-bridge/include/: loom_cuda_bridge.h
crates/loom-cuda-bridge/src/: cuda.rs  lib.rs
crates/loom-cuda-bridge/src/cuda/: activation_bridge.rs  attention_bridge.rs  logits_bridge.rs  mod.rs  norm_bridge.rs  rope_kv_bridge.rs  sampling_bridge.rs  speculative_bridge.rs
crates/loom-cuda-sys/: Cargo.toml  build.rs
crates/loom-cuda-sys/src/: lib.rs
crates/loom-cuda/benches/: silu_and_mul_dynamic_fp8.rs
crates/loom-cuda/examples/: rust_cuda_smoke.rs
crates/loom-cuda/src/: activation_dispatch.rs  attention_dispatch.rs  cuda_backend.rs  greedy_sample.rs  layout.rs  lib.rs  logits_dispatch.rs  min_p.rs  norm_dispatch.rs  paged_decode.rs  rms_norm.rs  rope_kv_dispatch.rs  rope_paged_kv.rs  runtime.rs  sampling_dispatch.rs  silu_and_mul.rs  speculative_dispatch.rs
crates/quill-core/: Cargo.toml
crates/quill-df/: Cargo.toml
crates/quill-df/src/: exec.rs  rule.rs
crates/quill-jit/: Cargo.toml
crates/quill-jit/src/: lib.rs
crates/quill-jit/src/lower/: options.rs
crates/quill-jit/src/mlir/: compiled.rs  emit.rs  lower.rs  mod.rs  tests.rs  verify.rs
crates/quillcache-attention-api/: Cargo.toml
crates/quillcache-attention-api/src/: lib.rs
crates/quillcache-catalog/: Cargo.toml
crates/quillcache-catalog/src/: lib.rs
crates/quillcache-gateway/: Cargo.toml
crates/quillcache-pool-api/: Cargo.toml
crates/quillcache-pool-api/src/: lib.rs
crates/quillcache-pool-local/: Cargo.toml
crates/quillcache-pool-local/src/: lib.rs
crates/quillcache-runtime/: Cargo.toml
crates/quillcache-runtime/src/: lib.rs
crates/quillcache-scheduler/: Cargo.toml
crates/quillcache-scheduler/src/: lib.rs
crates/quillcache-store/: Cargo.toml
crates/quillcache-tensor-transport/: Cargo.toml
crates/quillcache-tensor-transport/src/: lib.rs
crates/quillcache-types/: Cargo.toml
cuda/include/: loom_cuda.h
cuda/src/: attention_kernels.cu  greedy_sample.cu  min_p.cu  paged_decode_attention.cu
deploy/: README.md  modal_vllm.py  modal_vllm_connector.py  modal_vllm_disagg.py  modal_vllm_disagg_introspect.py
docs/: README.md  architecture.md  compatibility.md  m3-real-vllm.md  mvp-runbook.md  mvp.md  operator-catalog.md  platform-plan.md  protocols.md  real-engine-pool.md  roadmap.md  status.md  transfer-line-design.md  two-gpu-route-q.md  vllm-local-backend.md
docs/design/: architecture.md  code-layout.md  fp8-kv-cache.md  greedy-speculative-verify.md  operator-library.md  paged-decode-attention.md  protocols.md
docs/guides/: rust-cuda-fused-tail.md  two-gpu-route-q.md  vllm-ir-provider.md  vllm-local-backend.md
docs/research/: bytedance-aml-reading-map.md  flux-comet-overlap-notes.md  megascale-infer-notes.md
docs/results/: README.md  h20-fp8-kv-cache-write-20260724.json  h20-fused-tail-2026-07-20.json  h20-min-p-filter-20260722.json  h20-min-p-filter-vocab65536-20260722.json  h20-native-wheel-clean-install-abi2-20260724.json  h20-paged-decode-attention-20260722.json  h20-paged-decode-split-k-20260722.json  h20-paged-decode-split-k-block32-20260722.json  h20-paged-decode-split-k-f16-20260722.json  h20-selected-token-logprobs-20260722.json  h20-vllm-qwen25-speculative-loom-first-20260723.json  modal-l4-4k-2026-07-19.json  (+4 more)
examples/: quillcache-gateway.yaml  quillcache-local-mock.yaml  quillcache-modal.yaml
public/: index.html
python/: README.md  build_native.py  build_torch_extension.py  pyproject.toml  setup_cuda.py
python/attnarc_engine/: two_gpu_smoke.py
python/csrc/: loom_cuda_ops.cpp  torch_ops.cpp
python/loom_attention/: __init__.py  local_delegate.py  step_metadata.py  two_gpu_smoke.py  vllm_plugin.py  vllm_smoke.py
python/src/loom_attention/: __init__.py  cuda_ops.py  step_metadata.py  vllm_plugin.py
python/src/loom_kernels/: __init__.py  _native.py  _torch_dispatch.py  _torch_extension.py  torch_ops.py  vllm.py
python/src/loom_kernels/ops/: __init__.py  _common.py  activation.py  attention.py  logits.py  norm.py  rope_kv.py  sampling.py  telemetry.py
python/src/loom_kernels/vllm/: rope_kv.py
python/tests/: test_greedy_sample_logprobs.py  test_local_delegate.py  test_min_p_filter.py  test_paged_decode_attention.py  test_rope_paged_kv.py  test_selected_token_logprobs.py  test_silu_and_mul.py  test_silu_and_mul_dynamic_fp8.py  test_step_metadata.py  test_torch_ops.py  test_two_gpu_smoke.py  test_vllm_ir.py  test_vllm_plugin.py  test_vllm_smoke.py
python/tests/integration/: fused_tail_smoke.py  modal_two_gpu.py  modal_vllm.py  two_gpu_benchmark.py  two_gpu_smoke.py  vllm_smoke.py
scripts/: bench_jit_micro.sh  bench_tpch.sh
services/quillcache-attention-worker/: Cargo.toml
services/quillcache-attention-worker/src/: main.rs
services/quillcache-control/: Cargo.toml
services/quillcache-control/src/: main.rs
src/: cluster.rs  gateway.rs  main.rs  pd_proxy.rs  store_master_http.rs
tests/: df_arrow_parquet.rs
tools/: mock_engine.py
web/: astro.config.mjs  package-lock.json  package.json
(+58 files in other folders)
