[workspace]
members = [
    "crates/quillcache-types",
    "crates/quillcache-pool-api",
    "crates/quillcache-pool-local",
    "crates/quillcache-catalog",
    "crates/quillcache-scheduler",
    "crates/quillcache-attention-api",
    "crates/quillcache-runtime",
    "crates/quillcache-tensor-transport",
    "services/quillcache-control",
    "services/quillcache-attention-worker",
]
default-members = [
    "crates/quillcache-types",
    "crates/quillcache-pool-api",
    "crates/quillcache-pool-local",
    "crates/quillcache-catalog",
    "crates/quillcache-scheduler",
    "crates/quillcache-attention-api",
    "crates/quillcache-runtime",
    "crates/quillcache-tensor-transport",
    "services/quillcache-control",
    "services/quillcache-attention-worker",
]
resolver = "2"

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/feichai0017/quillcache"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5.23", features = ["derive"] }
holt = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.42", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

quillcache-attention-api = { path = "crates/quillcache-attention-api" }
quillcache-catalog = { path = "crates/quillcache-catalog" }
quillcache-pool-api = { path = "crates/quillcache-pool-api" }
quillcache-scheduler = { path = "crates/quillcache-scheduler" }
quillcache-tensor-transport = { path = "crates/quillcache-tensor-transport" }
quillcache-types = { path = "crates/quillcache-types" }
