[workspace]
members = [
    "crates/loom-cuda",
    "crates/loom-cuda-bridge",
    "crates/loom-cuda-sys",
    "crates/loom-kernels",
]
default-members = ["crates/loom-kernels", "crates/loom-cuda"]
resolver = "2"

[workspace.package]
version = "1.0.0-alpha.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/feichai0017/loom-kernels"
homepage = "https://feichai0017.github.io/loom-kernels/"

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
cc = "1.2"
half = "2.7"
