[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "attnarc-engine"
version = "2.0.0a1"
description = "vLLM and SGLang adapters for the AttnArc attention runtime"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
vllm = ["vllm>=0.25,<0.26"]
cuda = ["torch>=2.4"]

[project.entry-points."vllm.general_plugins"]
attnarc = "attnarc_engine.vllm_plugin:register"

[project.scripts]
attnarc-vllm-smoke = "attnarc_engine.vllm_smoke:main"
attnarc-two-gpu-smoke = "attnarc_engine.two_gpu_smoke:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["attnarc_engine*"]
