[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-attention-engine"
version = "2.0.0a1"
description = "vLLM and SGLang adapters for the Loom attention runtime"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
vllm = ["vllm>=0.25,<0.26"]
cuda = ["torch>=2.4"]

[project.entry-points."vllm.general_plugins"]
loom = "loom_attention.vllm_plugin:register"

[project.scripts]
loom-vllm-smoke = "loom_attention.vllm_smoke:main"
loom-two-gpu-smoke = "loom_attention.two_gpu_smoke:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["loom_attention*"]
