[package]
name = "loom-attention"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Disaggregated attention runtime for externally managed KV"

[dependencies]
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
holt.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
