[package]
name = "quill-core"
version = "0.3.1"
edition = "2021"
description = "Public database API and shell integration for QuillSQL"
license = "MIT"
repository = "https://github.com/feichai0017/quillsql"

[dependencies]
comfy-table = { workspace = true }
datafusion = { workspace = true }
quill-df = { version = "0.3.1", path = "../quill-df" }
quill-jit = { version = "0.3.1", path = "../quill-jit" }
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
