[package]
name = "quill-df"
version = "0.3.1"
edition = "2021"
description = "DataFusion frontend adapter for QuillSQL JIT pipelines"
license = "MIT"
repository = "https://github.com/feichai0017/quillsql"

[dependencies]
datafusion = { workspace = true }
futures = { workspace = true }
quill-jit = { version = "0.3.1", path = "../quill-jit" }
quill-plan = { version = "0.3.1", path = "../quill-plan" }
quill-runtime = { version = "0.3.1", path = "../quill-runtime" }
serde = { workspace = true }
