[package]
name = "quill-jit"
version = "0.3.1"
edition = "2021"
description = "Frontend-neutral JIT orchestration and MLIR lowering for QuillSQL"
license = "MIT"
repository = "https://github.com/feichai0017/quillsql"

[dependencies]
arrow = { workspace = true }
melior = { workspace = true }
quill-mlir = { version = "0.3.1", path = "../quill-mlir" }
quill-plan = { version = "0.3.1", path = "../quill-plan" }
quill-runtime = { version = "0.3.1", path = "../quill-runtime" }
serde = { workspace = true }
