[package]
name = "quillcache-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hot residency directory and Holt-backed persistent KV object catalog"

[dependencies]
holt.workspace = true
quillcache-pool-api.workspace = true
quillcache-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
