[package]
name = "quillcache-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node-local sequence, lease, and attention-plan runtime"

[dependencies]
quillcache-pool-api.workspace = true
quillcache-scheduler.workspace = true
quillcache-types.workspace = true
serde.workspace = true
thiserror.workspace = true
